# email-server

./: Cargo.toml
src/: main.rs
src/cfg/: config.rs
src/controllers/: mod.rs  request_email.rs
src/database/: users.rs
src/models/: mod.rs  prelude.rs  user.rs
src/structures/: database.rs  mod.rs  request.rs
